  -------------- REMINDER PLEASE KEEP ON TOP UNTIL RELEASE----------------
  ! Remember to enable the _free()-function in plugindescr.c (freeAll()) !
  ! as soon as the next release of GnuCash is out (2.0.0)                !
  ------------------------------------------------------------------------

2006/04/10: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- net2/urlfns.c, net2/url.xml:
  - added fields "userName" and "password" to GWEN_URL, the format of a
    complete URL is now:
    "proto://user:passwd@host/path:port", as in
    "http://me:secret@here/path:123"
    These new fields are optional, of course.


2006/04/07: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- included a temporary fix for MacOSX as suggested by Thorsten (introduce a 1s
  sleep when writing to a socket for the first time). 
  This is just an ugly hack, but it should work.


2006/04/06: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- db.c:
  - GWEN_DB_ReadFile(), GWEN_DB_ReadFileAs(), GWEN_DB_WriteFile() and
    GWEN_DB_WriteFileAs() now honour the flag "GWEN_DB_FLAGS_DOSMODE"
- added GWEN_DBIO: "rfc822". This plugin reads RFC822 message headers (e.g.
  those used in maildir or in HTTP requests)
- GWENHYWFAR_VERSION_BUILD is now automatically updated from SVN's revision
- changed GWENHYWFAR_VERSION_RELEASE_STRING and GWENHYWFAR_VERSION_FULL_STRING


2006/04/03: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- initial import into SVN


2006-03-27  Christian Stimming <stimming@tuhh.de>

	* src/parser/xsd_write.c, src/net2/nl_http.c: Add cast to
	isdigit() et al functions; needed for platforms where "char" has a
	different signedness than on most platforms. Notably
	sparc-solaris.

	* configure.ac: Change gcc version number checking so that it
	works with 2.95.x as well.

