@@ -3,6 +3,11 @@
   ! as soon as the next release of GnuCash is out (2.0.0)                !
   ------------------------------------------------------------------------
 
+2006/04/12: Martin Preuss<martin@libchipcard.de>
+-------------------------------------------------
+- fixed rfc822 DBIO plugin (import *and* export now work)
+
+
 2006/04/10: Martin Preuss<martin@libchipcard.de>
 -------------------------------------------------
 - net2/urlfns.c, net2/url.xml:
